<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    style="?attr/ar_background"
    android:layout_height="match_parent"
    tools:context=".ui.activity.applications.ApplicationsActivity">

    <ImageButton
        android:id="@+id/next_board_layout"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_margin="35dp"
        style="?attr/next_on_board_button_background_attrs"
        android:contentDescription="@string/des"
        android:elevation="10dp"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_baseline_arrow_forward_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/select_hint_text_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"

        android:layout_marginEnd="16dp"
        android:textSize="20sp"

        android:text="@string/select_app_mes"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/all_apps_switch" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/all_apps_switch"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/applications_mes"
        android:textSize="25sp"
        android:textStyle="bold"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/apps_recycler_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        app:layout_constraintBottom_toTopOf="@+id/next_board_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/select_hint_text_view" />

</androidx.constraintlayout.widget.ConstraintLayout>